overflow fix in output

--- a/src/app/jsonconverter/json-converter-output/json-converter-output.component.css
+++ b/src/app/jsonconverter/json-converter-output/json-converter-output.component.css
@@ -6,3 +6,7 @@
 
     height: 100%;
 }
+pre {
+
+    white-space: initial;
+}
